# log-analyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/app/domain/: interfaces.py  models.py
src/app/presentation/: reporter.py
src/app/services/: analyzer.py  config_loader.py  parser.py
tests/: test_analyzer.py  test_config_loader.py  test_parser.py  test_reporter.py
