[project]
name = "log-analyzer"
version = "0.1.0"
description = "Nginx log parser"
authors = [
    {name = "Artem Ziborev",email = "ziborev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, < 4.0"
dependencies = [
    "pydantic (>=2.11.1,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "app", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
ruff = "^0.11.2"
pre-commit = "^4.2.0"
commitizen = "^4.4.1"
coverage = "^7.8.0"
types-pyyaml = "^6.0.12.20250402"
